@startuml er_citizenmodule
skinparam defaultFontName Segoe UI
skinparam defaultFontSize 13
skinparam shadowing false
skinparam linetype ortho
skinparam entityBorderColor #2c3e50
skinparam entityBackgroundColor #ecf0f1
skinparam arrowColor #2c3e50

title Diagrama Entidad-Relación - Módulo de Ciudadanos

entity "ciudadanos" as Citizen {
    * id : INT <<PK>> <<AUTO_INCREMENT>>
    --
    * dni : VARCHAR(20) <<UNIQUE>>
    * nombre : VARCHAR(100)
    * apellidos : VARCHAR(150)
    * fecha_nac : DATE
    lugar_nac : VARCHAR(100)
    nacionalidad : VARCHAR(80)
    * sexo : CHAR(1)
    direccion : VARCHAR(255)
    municipio : VARCHAR(100)
    codigo_postal : VARCHAR(10)
    telefono : VARCHAR(20)
    email : VARCHAR(150)
    estado_civil : VARCHAR(30)
    * activo : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
}

entity "vehiculos" as Vehicle {
    * id : INT <<PK>> <<AUTO_INCREMENT>>
    --
    * matricula : VARCHAR(20) <<UNIQUE>>
    marca : VARCHAR(80)
    modelo : VARCHAR(80)
    color : VARCHAR(40)
    tipo : VARCHAR(40)
    propietario_id : INT <<FK>>
    * activo : BOOLEAN
    * created_at : TIMESTAMP
}

entity "ciudadano_documentos" as Document {
    * id : INT <<PK>> <<AUTO_INCREMENT>>
    --
    * ciudadano_id : INT <<FK>>
    * tipo_documento : VARCHAR(80)
    * nombre_archivo : VARCHAR(255)
    * ruta_archivo : VARCHAR(512)
    * subido_en : TIMESTAMP
}

Citizen ||--o{ Vehicle : "posee (propietario_id)"
Citizen ||--o{ Document : "tiene (ciudadano_id)"

note right of Citizen
  sexo: 'M' | 'F' | 'O'
  estado_civil: 'Soltero/a',
  'Casado/a', 'Divorciado/a', etc.
  activo: soft delete
  (no se borra físicamente)
end note

note right of Document
  ruta_archivo: ruta absoluta en
  disco local del operador.
  Apertura con Desktop.open().
  ON DELETE CASCADE desde ciudadanos.
end note

note right of Vehicle
  propietario_id: ON DELETE SET NULL
  Un vehículo puede existir sin
  ciudadano asignado.
end note

@enduml
